--- a/inquiry2/templates/base.html
+++ b/inquiry2/templates/base.html
@@ -7,14 +7,14 @@
     <meta property="og:description" content="Brandon Chinn's Inquiry 2 assignment for UGIS 188">
     <meta property="og:image" content="{% static 'img/fb-logo.png' %}">
     <link rel="icon" type="image/png" href="{% static 'img/favicon.png' %}">
-    <link rel="stylesheet" type="text/css" href="{% static 'css/base.css' %}">
-    {% if good_design %}
-        <link rel="stylesheet" type="text/css" href="{% static 'css/style.css' %}">
-    {% endif %}
+    {% block head %}{% endblock %}
 </head>
 <body>
     <header>
         <h1>Much Meme, Very Survey</h1>
     </header>
+    <div class="content">
+        {% block body %}{% endblock %}
+    </div>
 </body>
 </html>
