--- a/inquiry2/templates/submitted-1.html
+++ b/inquiry2/templates/submitted-1.html
@@ -1,7 +1,5 @@
 {% extends "survey-1.html" %}
 
 {% block body %}
-    {% for message in messages %}
-        <p>{{ message }}</p>
-    {% endfor %}
+    {% include "partials/submitted_message.html" %}
 {% endblock %}
