--- a/inquiry2/templates/survey-2.html
+++ b/inquiry2/templates/survey-2.html
@@ -2,12 +2,11 @@
 {% load staticfiles %}
 
 {% block head %}
-    <link rel="stylesheet" type="text/css" href="{% static 'base-2.css' %}">
+    <link rel="stylesheet" type="text/css" href="{% static 'css/base-2.css' %}">
     {% if good_design %}
-        <link rel="stylesheet" type="text/css" href="{% static 'style-2.css' %}">
+        <link rel="stylesheet" type="text/css" href="{% static 'css/style-2.css' %}">
     {% endif %}
 {% endblock %}
 
 {% block body %}
-
 {% endblock %}
