add validation, clarify instructions

--- a/inquiry2/templates/partials/explanation.html
+++ b/inquiry2/templates/partials/explanation.html
@@ -1,6 +1,6 @@
 {% load staticfiles %}
 <p>Thank you for choosing to participate in my #lit survey! In this survey, I am hoping to answer the question, "What makes a meme funny?". With your help, I can figure out what aspects of a meme make it funny &ndash; specifically looking at the overall funniness of the meme and how well the joke fits the character of the meme.</p>
-<p><span>Instructions:</span> for each meme that is provided to you, please provide a score from 1 to 5 on how funny the meme is to you overall. Then provide another score from 1 to 5 on how well the joke matches the meme image.</p>
+<p><span>Instructions:</span> for each meme that is provided to you, please provide a score from 1 (low) to 5 (high) on how funny the meme is to you overall. Then provide another score from 1 to 5 on how well the joke matches the meme image.</p>
 
 <h2>Meme on!</h2>
 <script src="https://www.youtube.com/iframe_api"></script>
