--- a/inquiry2/templates/survey-1.html
+++ b/inquiry2/templates/survey-1.html
@@ -50,7 +50,7 @@
         {{ form.name }}
     </div>
     <div class="page details">
-        <p>Please rate this survey. What was your overall perception of the survey (how professional it seemed, how well you thought it did the job, etc.)? What was your overall satisfaction with the survey?</p>
+        <p>Please rate this survey (1=low, 5=high). What was your overall perception of the survey (how professional it seemed, how accurate it was in assessing your dankness, etc.)? What was your overall satisfaction with the survey?</p>
         <table class="scale">
             <tr>
                 <td></td>
