--- a/inquiry2/static/scss/base-1.scss
+++ b/inquiry2/static/scss/base-1.scss
@@ -100,4 +100,8 @@ table.scale {
 .messages {
     text-align: center;
     margin-top: 20px;
+    li {
+        color: red;
+        font-weight: bold;
+    }
 }
