--- a/inquiry2/templates/survey-1.html
+++ b/inquiry2/templates/survey-1.html
@@ -85,7 +85,7 @@
         {{ form.comments }}
     </div>
     <div class="page submitting">
-        <p class="centered">Submitting...</p>
+        <h2>Submitting...</h2>
         <img src="{% static 'img/loading.jpg' %}">
     </div>
     <div class="buttons">
