--- a/inquiry2/static/scss/base-1.scss
+++ b/inquiry2/static/scss/base-1.scss
@@ -11,6 +11,10 @@ body {
     min-width: $width;
 }
 
+h2 {
+    margin-bottom: 10px;
+}
+
 p {
     margin-bottom: 10px;
     line-height: 1.3em;
@@ -30,8 +34,9 @@ ul {
 }
 
 input {
-    width: 200px;
-    padding: 5px;
+    width: 300px;
+    padding: 2px 5px;
+    font-size: 14px;
     &[type=radio] {
         width: initial;
     }
@@ -40,7 +45,6 @@ input {
 header {
     padding: 40px 20px;
     text-align: center;
-    margin-bottom: 20px;
     h1 {
         margin: 0;
         font-size: 48px;
@@ -50,7 +54,7 @@ header {
 .content {
     width: $width;
     margin: 0 auto;
-    padding: 0 20px;
+    padding: 20px;
 }
 
 .page {
@@ -73,16 +77,13 @@ table.scale {
 
 .explanation {
     display: block;
-    h2 {
-        margin-bottom: 5px;
-    }
     span {
         font-weight: bold;
     }
 }
 
 .meme img {
-    height: 400px;
+    height: 350px;
 }
 
 .name {
