--- a/inquiry2/templates/survey-2.html
+++ b/inquiry2/templates/survey-2.html
@@ -4,6 +4,8 @@
 {% block head %}
     <link rel="stylesheet" type="text/css" href="{% static 'css/base-2.css' %}">
     {% if good_design %}
+        <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Fjalla+One">
+        <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans:400,600">
         <link rel="stylesheet" type="text/css" href="{% static 'css/style-2.css' %}">
     {% endif %}
     <script src="{% static 'js/base-2.js' %}"></script>
