--- a/inquiry2/templates/base.html
+++ b/inquiry2/templates/base.html
@@ -6,6 +6,7 @@
     <meta property="og:title" content="Much Meme, Very Survey">
     <meta property="og:description" content="Brandon Chinn's Inquiry 2 assignment for UGIS 188">
     <meta property="og:image" content="{% static 'img/fb-logo.jpg' %}">
+    <meta property="og:url" content="http://muchmeme-verysurvey.herokuapp.com">
     <link rel="icon" type="image/png" href="{% static 'img/favicon.png' %}">
     <script src="{% static 'js/vendor/jquery-1.11.2.min.js' %}"></script>
     {% block head %}{% endblock %}
