remove name, make anonymous

--- a/inquiry2/templates/survey-1.html
+++ b/inquiry2/templates/survey-1.html
@@ -46,13 +46,9 @@
             </table>
         </div>
     {% endfor %}
-    <div class="page name">
-        <p class="centered">Almost done! Plz fill out these last few fields.</p>
-        <img src="{% static 'img/what-is-name.jpg' %}">
-        {{ form.name }}
-    </div>
     <div class="page details">
-        <p>Please rate this survey (1=low, 5=high). What was your overall perception of the survey (how professional it seemed, how accurate it was in assessing your dankness, etc.)? What was your overall satisfaction with the survey?</p>
+        <p class="centered">Almost done! Plz fill out these last few fields.</p>
+        <p>Almost done! Plz rate this survey (1=low, 5=high). What was your overall perception of the survey (how professional it seemed, how accurate it was in assessing your dankness, etc.)? What was your overall satisfaction with the survey?</p>
         <table class="scale">
             <tr>
                 <td></td>
