--- a/inquiry2/templates/data.html
+++ b/inquiry2/templates/data.html
@@ -6,5 +6,6 @@
         <input type="password" name="password">
         <button>Get data</button>
     </form>
+    <p>Total: {{ total }}</p>
 </body>
 </html>
